add pq/search
