# out/manticore-go/model_percolate_request_query.go
@@ -1,0 +1,15 @@
+/*
+ * Manticore Search API
+ *
+ * This is the API for Manticore Search HTTP protocol 
+ *
+ * API version: 1.0.0
+ * Contact: adrian.nuta@manticoresearch.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+// PercolateRequestQuery struct for PercolateRequestQuery
+type PercolateRequestQuery struct {
+	Percolate map[string]interface{} `json:"percolate"`
+}
